[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "Blackholes_myenv"
version = "1.0.0"
description = "Multi-round technical interview simulation environment for evaluating AI agents on reasoning, memory, and decision-making in a hiring scenario."
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
